# profinaut

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  Makefile  README.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml
docker/vault/: Cargo.toml  approle_definitions.yaml  create_approles.py  create_policies.py  vault-init.Dockerfile
docker/vault/config/: vault.hcl
docker/vault/exporter/: Dockerfile
docker/vault/policies/: admin.hcl  bot-manager.hcl  monitoring.hcl  ops-audit.hcl  quality-audit.hcl  readonly.hcl  strategy-evolver.hcl  test-engine.hcl
docker/vault/scripts/: Merge-Env.ps1  create_approles.py  create_policies.py  generate_env_ci.sh  init.sh  init_oidc.py  init_oidc.sh  merge_env.sh  renew_secret_id_and_update_github.sh  requirements.txt
docker/vault/vault-exporter/: Dockerfile
services/marketdata-rs/: Cargo.toml  README.md
services/marketdata-rs/crypto-collector/: Cargo.toml
services/marketdata-rs/src/: main.rs
services/marketdata-rs/symbol-master/: Cargo.toml  config.yaml
services/marketdata-rs/ucel-ws-subscriber/: Cargo.toml
ucel/: Cargo.toml  README.md
ucel/coverage/: BYBIT.yaml  binance-coinm.yaml  binance-options.yaml  binance-usdm.yaml  binance.yaml  bitbank.yaml  bitflyer.yaml  bitget.yaml  bithumb.yaml  bitmex.yaml  bittrade.yaml  bybit.yaml  coinbase.yaml  coincheck.yaml  deribit.yaml  gmocoin.yaml  htx.yaml  kraken.yaml  okx.yaml  sbivc.yaml  upbit.yaml
ucel/coverage/coverage_v2/: strict_venues.json
ucel/coverage_v2/: binance-coinm.yaml  binance-options.yaml  binance-spot.yaml  binance-usdm.yaml  bitget-coin-futures.yaml  bitget-spot.yaml  bitget-usdt-futures.yaml  bittrade.yaml  bybit-inverse.yaml  bybit-linear.yaml  bybit-options.yaml  bybit-spot.yaml  gmocoin-private.yaml  gmocoin-public.yaml  htx-spot.yaml  kraken.yaml  okx-futures.yaml  okx-option.yaml  okx-spot.yaml  okx-swap.yaml
ucel/coverage_v2/domestic_public/: jp_public_inventory.json  jp_public_inventory.lock.json  jp_public_inventory.schema.json
ucel/coverage_v2/ir/: ir_inventory.json  ir_inventory.schema.json
ucel/crates/ucel-cex-binance/: Cargo.toml
ucel/crates/ucel-cex-binance-coinm/: Cargo.toml
ucel/crates/ucel-cex-binance-options/: Cargo.toml
ucel/crates/ucel-cex-binance-usdm/: Cargo.toml
ucel/crates/ucel-cex-bitbank/: Cargo.toml
ucel/crates/ucel-cex-bitflyer/: Cargo.toml
ucel/crates/ucel-cex-bitget/: Cargo.toml
ucel/crates/ucel-cex-bithumb/: Cargo.toml  README.md
ucel/crates/ucel-cex-bitmex/: Cargo.toml
ucel/crates/ucel-cex-bittrade/: Cargo.toml
ucel/crates/ucel-cex-bybit/: Cargo.toml
ucel/crates/ucel-cex-coinbase/: Cargo.toml
ucel/crates/ucel-cex-coincheck/: Cargo.toml
ucel/crates/ucel-cex-deribit/: Cargo.toml
ucel/crates/ucel-cex-gmocoin/: Cargo.toml
ucel/crates/ucel-cex-htx/: Cargo.toml
ucel/crates/ucel-cex-kraken/: Cargo.toml
ucel/crates/ucel-cex-okx/: Cargo.toml
ucel/crates/ucel-cex-sbivc/: Cargo.toml
ucel/crates/ucel-cex-upbit/: Cargo.toml
ucel/crates/ucel-chain-ethereum/: Cargo.toml
ucel/crates/ucel-core/: Cargo.toml
ucel/crates/ucel-diagnostics-analyzer/: Cargo.toml
ucel/crates/ucel-diagnostics-cli/: Cargo.toml
ucel/crates/ucel-diagnostics-core/: Cargo.toml
ucel/crates/ucel-equity-adapter-demo/: Cargo.toml
ucel/crates/ucel-equity-core/: Cargo.toml
ucel/crates/ucel-execution-core/: Cargo.toml
ucel/crates/ucel-ir/: Cargo.toml  README.md
ucel/crates/ucel-journal/: Cargo.toml
ucel/crates/ucel-market-meta-catalog/: Cargo.toml  build.rs
ucel/crates/ucel-registry/: Cargo.toml
ucel/crates/ucel-sdk/: Cargo.toml
ucel/crates/ucel-subscription-planner/: Cargo.toml
ucel/crates/ucel-subscription-store/: Cargo.toml
ucel/crates/ucel-symbol-adapter/: Cargo.toml
ucel/crates/ucel-symbol-core/: Cargo.toml
ucel/crates/ucel-symbol-store/: Cargo.toml
ucel/crates/ucel-testkit/: Cargo.toml
ucel/crates/ucel-transport/: Cargo.toml
ucel/crates/ucel-ws-ingest/: Cargo.toml
ucel/crates/ucel-ws-rules/: Cargo.toml
ucel/docs/: ARCH_UCEL_CRATE_GRAPH.md  ARCH_UCEL_INVOKER.md  USAGE_HUB.md  USAGE_INVOKER.md  runtime-wiring.md  symbol-master-design.md  symbol-master-remaining-tasks.md  ws-full-coverage-design.md  ws-full-coverage-ops-naming.md
ucel/docs/chains/: evm_adapter_policy.md  evm_finality_policy.md  evm_nonce_and_fee_policy.md  evm_reorg_resume_policy.md  evm_support_matrix.md
ucel/docs/diagnostics/: analyzer_policy.md  diagnostics_support_matrix.md  golden_bundle_policy.md  runbook_drift_policy.md  support_bundle_policy.md
ucel/docs/equities/: equity_adapter_policy.md  equity_calendar_policy.md  equity_corporate_action_policy.md  equity_symbol_mapping_policy.md  equity_vendor_support_matrix.md
ucel/docs/exchanges/: domestic_public_api_matrix.md  domestic_public_change_management.md  domestic_public_compat_matrix.md  domestic_public_endpoint_mapping.md  domestic_public_final_support_report.md  domestic_public_rest_extension_matrix.md  domestic_public_rest_extension_schema_matrix.md  domestic_public_rest_extension_usage.md  domestic_public_scope_policy.md  domestic_public_ws_extension_matrix.md  domestic_public_ws_extension_runtime_matrix.md  domestic_public_ws_extension_schema_matrix.md  domestic_public_ws_extension_usage.md  domestic_public_ws_integrity_policy.md  domestic_public_ws_matrix.md  domestic_public_ws_runtime_matrix.md  (+4 more)
ucel/examples/: auth_core_preview.rs  chain_evm_logs_preview.rs  chain_evm_preview.rs  diagnostics_analyzer_preview.rs  diagnostics_bundle_preview.rs  domestic_public_compat_preview.rs  domestic_public_ext_rest_preview.rs  domestic_public_ext_ws_preview.rs  domestic_public_inventory_preview.rs  domestic_public_ws_preview.rs  equity_calendar_preview.rs  equity_data_preview.rs  hub_list_all_exchanges.rs  hub_list_exchange_catalogs.rs  hub_list_keys.rs  hub_rest_ticker.rs  hub_ws_ticker.rs  invoker_list.rs  ir_canonical_preview.rs  ir_inventory_preview.rs  ir_issuer_sites_preview.rs  ir_jp_official_preview.rs  ir_normalize_preview.rs  ir_us_official_preview.rs  ws_ingest_preview.rs  ws_ingest_resume_preview.rs  ws_ingest_run.md
(+2384 files in other folders)
