[workspace]
members = [
  "crates/ucel-core",
  "crates/ucel-transport",
  "crates/ucel-registry",
  "crates/ucel-testkit",
  "crates/ucel-cex-gmocoin",
  "crates/ucel-chain-ethereum",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
