[workspace]
members = [
  "crates/ucel-core",
  "crates/ucel-transport",
  "crates/ucel-registry",
  "crates/ucel-testkit",
  "crates/ucel-cex-gmocoin",
  "crates/ucel-cex-kraken",
  "crates/ucel-cex-binance-usdm",
  "crates/ucel-cex-bybit",
  "crates/ucel-cex-upbit",
  "crates/ucel-cex-coinbase",
  "crates/ucel-cex-coincheck",
  "crates/ucel-cex-binance-coinm",
  "crates/ucel-cex-binance-options",
  "crates/ucel-cex-bitmex",
  "crates/ucel-cex-bitflyer",
  "crates/ucel-cex-binance",
  "crates/ucel-cex-bitbank",
  "crates/ucel-chain-ethereum",
  "crates/ucel-cex-bybit",
  "crates/ucel-cex-htx",
  "crates/ucel-cex-upbit",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["sync", "rt"] }
bytes = { version = "1", features = ["serde"] }
