[workspace]
members = [
  "crates/ucel-core",
  "crates/ucel-transport",
  "crates/ucel-registry",
  "crates/ucel-testkit",
  "crates/ucel-symbol-core",
  "crates/ucel-symbol-adapter",
  "crates/ucel-symbol-store",
  "crates/ucel-cex-bitbank",
  "crates/ucel-cex-gmocoin",
  "crates/ucel-cex-kraken",
  "crates/ucel-cex-binance-usdm",
  "crates/ucel-cex-bybit",
  "crates/ucel-cex-upbit",
  "crates/ucel-cex-coinbase",
  "crates/ucel-cex-coincheck",
  "crates/ucel-cex-binance-coinm",
  "crates/ucel-cex-binance-options",
  "crates/ucel-cex-bitmex",
  "crates/ucel-cex-bitflyer",
  "crates/ucel-cex-binance",
  "crates/ucel-cex-bittrade",
  "crates/ucel-cex-deribit",
  "crates/ucel-cex-bitget",
  "crates/ucel-cex-htx",
  "crates/ucel-cex-sbivc",
  "crates/ucel-cex-okx",
  "crates/ucel-chain-ethereum",
  "crates/ucel-ir",
  "crates/ucel-equity-core",
  "crates/ucel-equity-adapter-demo",
  "crates/ucel-ws-rules",
  "crates/ucel-subscription-planner",
  "crates/ucel-subscription-store",
  "crates/ucel-journal",
  "crates/ucel-sdk",
  "crates/ucel-execution-core",
  "crates/ucel-market-meta-catalog",
  "crates/ucel-diagnostics-core",
  "crates/ucel-diagnostics-analyzer",
  "crates/ucel-diagnostics-cli",
]
resolver = "2"
default-members = ["crates/ucel-registry"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["sync", "rt"] }
bytes = { version = "1", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-float"] }
semver = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
tempfile = "3"
