[package]
name = "vault_test"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[[bin]]
name = "vault_test"
path = "src/bin/vault_test.rs"
