[package]
name = "marketdata-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["query"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
