[package]
name = "crypto-collector"
version = "0.1.0"
edition = "2021"
description = "Multi-Exchange Market Data Collector Framework v1.4 (Crypto Subsystem)"

[dependencies]
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
