[package]
name = "crypto-collector"
version = "0.1.0"
edition = "2021"
description = "Multi-Exchange Market Data Collector Framework v1.4 (Crypto Subsystem)"

[dependencies]
axum = { version = "0.7", features = ["json"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time", "fs", "io-util"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
governor = "0.6"
rand = "0.8"
rand_chacha = "0.3"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
