[package]
name = "symbol-master"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
tracing = "0.1"
ucel-symbol-core = { path = "../../../ucel/crates/ucel-symbol-core" }
ucel-symbol-store = { path = "../../../ucel/crates/ucel-symbol-store" }
