[package]
name = "symbol-master"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal", "net"] }
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hex = "0.4"
ucel-symbol-adapter = { path = "../../../ucel/crates/ucel-symbol-adapter" }
ucel-core = { path = "../../../ucel/crates/ucel-core" }
ucel-symbol-core = { path = "../../../ucel/crates/ucel-symbol-core" }
ucel-symbol-store = { path = "../../../ucel/crates/ucel-symbol-store" }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
