[package]
name = "ucel-ws-subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
ucel-ws-rules = { path = "../../../ucel/crates/ucel-ws-rules" }
ucel-subscription-planner = { path = "../../../ucel/crates/ucel-subscription-planner" }
ucel-subscription-store = { path = "../../../ucel/crates/ucel-subscription-store" }
ucel-journal = { path = "../../../ucel/crates/ucel-journal" }
ucel-registry = { path = "../../../ucel/crates/ucel-registry" }
ucel-transport = { path = "../../../ucel/crates/ucel-transport" }
ucel-core = { path = "../../../ucel/crates/ucel-core" }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt"] }

[[bin]]
name = "ucel-ws-subscriber"
path = "src/main.rs"
