[package]
name = "ucel-ws-subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
ucel-ws-rules = { path = "../../../ucel/crates/ucel-ws-rules" }
ucel-subscription-planner = { path = "../../../ucel/crates/ucel-subscription-planner" }
ucel-subscription-store = { path = "../../../ucel/crates/ucel-subscription-store" }
ucel-journal = { path = "../../../ucel/crates/ucel-journal" }
ucel-registry = { path = "../../../ucel/crates/ucel-registry" }
ucel-transport = { path = "../../../ucel/crates/ucel-transport" }
ucel-core = { path = "../../../ucel/crates/ucel-core" }

# adapters
ucel-cex-gmocoin = { path = "../../../ucel/crates/ucel-cex-gmocoin" }
ucel-cex-bybit = { path = "../../../ucel/crates/ucel-cex-bybit" }
ucel-cex-bitget = { path = "../../../ucel/crates/ucel-cex-bitget" }
ucel-cex-okx = { path = "../../../ucel/crates/ucel-cex-okx" }
ucel-cex-htx = { path = "../../../ucel/crates/ucel-cex-htx" }
ucel-cex-kraken = { path = "../../../ucel/crates/ucel-cex-kraken" }
ucel-cex-bittrade = { path = "../../../ucel/crates/ucel-cex-bittrade" }

serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = { version = "0.1" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "ucel-ws-subscriber"
path = "src/main.rs"
