[package]
name = "ucel-cex-binance-options"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ucel-core = { path = "../ucel-core" }
ucel-transport = { path = "../ucel-transport" }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
serde_yaml = { workspace = true }
