[package]
name = "ucel-cex-binance-options"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }
ucel-core = { path = "../ucel-core" }
ucel-transport = { path = "../ucel-transport" }
ucel-testkit = { path = "../ucel-testkit" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
