[package]
name = "ucel-cex-binance-usdm"
version = "0.1.0"
edition.workspace = true

[dependencies]
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
ucel-core = { path = "../ucel-core" }
ucel-transport = { path = "../ucel-transport" }
ucel-testkit = { path = "../ucel-testkit" }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde_yaml.workspace = true
edition = "2021"

[dependencies]
bytes = { version = "1", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
ucel-core = { path = "../ucel-core" }
ucel-transport = { path = "../ucel-transport" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync"] }
ucel-registry = { path = "../ucel-registry" }
