[package]
name = "ucel-cex-binance-usdm"
version = "0.1.0"
edition.workspace = true

[dependencies]
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ucel-core = { path = "../ucel-core" }
ucel-transport = { path = "../ucel-transport" }
ucel-testkit = { path = "../ucel-testkit" }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde_yaml.workspace = true
