[package]
name = "ucel-cex-bitflyer"
version = "0.1.0"
edition = "2021"

[dependencies]
ucel-market-meta-catalog = { path = "../ucel-market-meta-catalog" }
ucel-symbol-core = { path = "../ucel-symbol-core" }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ucel-core = { path = "../ucel-core" }
ucel-transport = { path = "../ucel-transport" }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

hmac = "0.13.0-rc.5"
sha2 = "0.11.0-rc.5"
hex = "0.4.3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde_yaml = { workspace = true }
