[package]
name = "ucel-cex-bittrade"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
ucel-core = { path = "../ucel-core" }
ucel-transport = { path = "../ucel-transport" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
ucel-testkit = { path = "../ucel-testkit" }
ucel-registry = { path = "../ucel-registry" }
