[package]
name = "ucel-cex-bybit"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
ucel-core = { path = "../ucel-core" }
ucel-transport = { path = "../ucel-transport" }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt"] }
