[package]
name = "ucel-cex-coinbase"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ucel-core = { path = "../ucel-core" }
ucel-testkit = { path = "../ucel-testkit" }
ucel-transport = { path = "../ucel-transport" }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde_json = { workspace = true }
