[package]
name = "ucel-cex-coincheck"
version = "0.1.0"
edition.workspace = true

[dependencies]
bytes.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
ucel-core = { path = "../ucel-core" }
ucel-transport = { path = "../ucel-transport" }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync"] }
