[package]
name = "ucel-cex-coincheck"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
bytes.workspace = true
tracing.workspace = true
ucel-core = { path = "../ucel-core" }
ucel-transport = { path = "../ucel-transport" }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt"] }
