[package]
name = "ucel-cex-coincheck"
version = "0.1.0"
edition = "2021"

[dependencies]
ucel-market-meta-catalog = { path = "../ucel-market-meta-catalog" }
ucel-symbol-core = { path = "../ucel-symbol-core" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
bytes.workspace = true
tracing.workspace = true
ucel-core = { path = "../ucel-core" }
ucel-transport = { path = "../ucel-transport" }
uuid = { version = "1", features = ["v4"] }

hmac = "0.13.0-rc.5"
sha2 = "0.11.0-rc.5"
hex = "0.4.3"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt"] }
