[package]
name = "ucel-cex-gmocoin"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bytes = { version = "1", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
ucel-core = { path = "../ucel-core" }
ucel-transport = { path = "../ucel-transport" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
ucel-testkit = { path = "../ucel-testkit" }
