[package]
name = "ucel-cex-htx"
version = "0.1.0"
edition.workspace = true

[dependencies]
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
ucel-core = { path = "../ucel-core" }
ucel-transport = { path = "../ucel-transport" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync"] }
ucel-testkit = { path = "../ucel-testkit" }
