[package]
name = "ucel-cex-htx"
version = "0.1.0"
edition.workspace = true

[dependencies]
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
ucel-core = { path = "../ucel-core" }
ucel-transport = { path = "../ucel-transport" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio.workspace = true
tracing.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde_yaml.workspace = true
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
