[package]
name = "ucel-cex-okx"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
ucel-core = { path = "../ucel-core" }
ucel-transport = { path = "../ucel-transport" }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tracing-subscriber = "0.3"
