[package]
name = "ucel-cex-sbivc"
version = "0.1.0"
edition.workspace = true

[dependencies]
ucel-market-meta-catalog = { path = "../ucel-market-meta-catalog" }
ucel-symbol-core = { path = "../ucel-symbol-core" }
bytes.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
ucel-core = { path = "../ucel-core" }

[dev-dependencies]
tracing-subscriber = "0.3"
serde_yaml.workspace = true
