[package]
name = "ucel-cex-upbit"
version = "0.1.0"
edition = "2021"

[dependencies]
ucel-market-meta-catalog = { path = "../ucel-market-meta-catalog" }
ucel-symbol-core = { path = "../ucel-symbol-core" }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }
ucel-core = { path = "../ucel-core" }
ucel-transport = { path = "../ucel-transport" }

[dev-dependencies]
ucel-testkit = { path = "../ucel-testkit" }
