[package]
name = "ucel-diagnostics-analyzer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tar = "0.4"
zstd = "0.13"
sha2 = "0.10"
hex = "0.4"
semver = { workspace = true }
ucel-diagnostics-core = { path = "../ucel-diagnostics-core" }

[dev-dependencies]
tempfile = "3"
