[package]
name = "ucel-diagnostics-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting", "serde"] }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chacha20poly1305 = { workspace = true, features = ["alloc"] }
ucel-diagnostics-core = { path = "../ucel-diagnostics-core" }
ucel-diagnostics-analyzer = { path = "../ucel-diagnostics-analyzer" }

[dev-dependencies]
tempfile = { workspace = true }
