[package]
name = "ucel-diagnostics-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ucel-core = { path = "../ucel-core" }
